# cs644

./: .gitignore  LICENSE  Makefile  README.md  crashcourse-stripped.c  meson.build  precommit.toml
admin/: create_students.sh  mkbigfile.py  mkpwd.py  set_passwords.sh  shellrc
archive/2025-001-spring/: README.md
archive/2025-001-spring/dotfiles/: zshrc
archive/2025-001-spring/include/: cs644.h
archive/2025-001-spring/week1/: switch.c
archive/2025-001-spring/week1/solutions/: redact.c
archive/2025-001-spring/week2/: example.c
archive/2025-001-spring/week2/solutions/: count-whitespace.c  read-after-write.c
archive/2025-001-spring/week3/: simultaneous-with-locking.c
archive/2025-001-spring/week3/solutions/: getdents-atomic.c  make_tree.sh  printperm.c  rmrf.c
archive/2025-001-spring/week4/: forkexec.c
archive/2025-001-spring/week4/solutions/: execs.c  python_fork.py
archive/2025-001-spring/week5/: shm_example.c
archive/2025-001-spring/week5/solutions/: pipebuffer.c
archive/2025-001-spring/week9/solutions/: double_delivery.c  multiple_pending.c  sig_post_exec.c  sig_pre_exec.c
archive/2025-002-fall/: meson.build
archive/2025-002-fall/include/: cs644.h
archive/2025-002-fall/lib/: cs644.c
archive/2025-002-fall/week1/: crashcourse-no-comments.c
archive/2025-002-fall/week2/solutions/: line-by-line.c  open-errors.c  read-after-write.c
archive/2025-002-fall/week3/solutions/: cp.c  files-are-hard.c  getdents-atomic.c
archive/2025-002-fall/week4/solutions/: execs.c
archive/2025-002-fall/week5/solutions/: pipebuffer.c  ringbuffer.c
archive/2025-002-fall/week6/: hello_conn_tcp.c
archive/2025-002-fall/week6/solutions/: close_shutdown.c  recv.c
archive/2025-002-fall/week7/solutions/: locks.c  main_returns.c
archive/2025-002-fall/week8/solutions/: double_delivery.c  reentrant_handler.c  sig_post_exec.c  signalfd.c
archive/2025-002-fall/week9/: cat_io_uring.c  epoll_server.c
dotfiles/: bashrc
final/db/: main.c
final/http/: main.c
include/: cs644.h  cs644_topfiles.h
lib/: cs644.c  cs644_topfiles.c
tools/: mkpwd.py
utils/: lib.py  make_tree.py
week1/: crashcourse.c  duplicate.py  line_by_line.py  simultaneous.py  switch.c
week2/: copytree.py  example.py  rmtree_v1_dangerous.py  rmtree_v2_dangerous.py  rmtree_v3_safe.py
week2/solutions/: count-whitespace.c  line-by-line.c  open-errors.c  read-after-write.c  simultaneous.c
week3/: run.py  simultaneous-with-locking.c
week3/solutions/: cp.c  getdents-atomic.c  printperm.c  rmrf.c
week4/: forkexec.c  myfifo.py  pipe_edge_cases.py  pipe_fork.py  uds_edge_cases.py  uds_server.py
week4/solutions/: execs.c  mytime.c  python_fork.py
week5/: in-class-example.c
week5/solutions/: pyfork.py  ringbuffer.c
week6/: hello_conn.c  rot13_udp.c
week6/solutions/: connect_bind.c
week7/: in_class_example.c
week7/solutions/: deadlock.c  lock_n_exit.c  locks.c  main_returns.c
week8/: sigcatch.c  sigexample.c
week8/solutions/: multiple_pending.c  sig_fork.c  sig_pre_exec.c
week9/: bigfiles_naive.c  cat_liburing.c  epoll_server.c  open_nonblock.c
week9/solutions/: reentrant_handler.c  sig_fork.c  sig_post_exec.c  sig_pre_exec.c  signalfd.c
